// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User input Match snapshoot create 1`] = `
<Fragment>
  <IF
    condt={false}
  >
    <Col
      md={4}
      xs={24}
    >
      <FormItem
        label="ID"
        name="id"
      >
        <Input
          readOnly={true}
          type="text"
        />
      </FormItem>
    </Col>
  </IF>
  <Col
    md={4}
    xs={24}
  >
    <FormItem
      label="Tên đăng nhập"
      name="name"
      rules={
        Array [
          Object {
            "message": "Vui lòng nhập tên đăng nhập",
            "required": true,
          },
          Object {
            "max": 255,
            "message": "Tên vượt quá độ dài cho phép",
          },
          Object {
            "message": "Tên đăng nhập không hợp lệ",
            "pattern": /\\^\\[\\\\t-\\\\r A-Z_a-z\\\\xA0\\\\xC0-\\\\xC3\\\\xC8-\\\\xCA\\\\xCC\\\\xCD\\\\xD2-\\\\xD5\\\\xD9\\\\xDA\\\\xDD\\\\xE0-\\\\xE3\\\\xE8-\\\\xEA\\\\xEC\\\\xED\\\\xF2-\\\\xF5\\\\xF9\\\\xFA\\\\u0102\\\\u0103\\\\u0110\\\\u0111\\\\u0128\\\\u0129\\\\u0168\\\\u0169\\\\u01A0\\\\u01A1\\\\u01AF\\\\u01B0\\\\u1680\\\\u1EA0-\\\\u1EBD\\\\u1EC0-\\\\u1EF9\\\\u2000-\\\\u200A\\\\u2028\\\\u2029\\\\u202F\\\\u205F\\\\u3000\\\\uFEFF\\]\\+\\$/,
          },
        ]
      }
    >
      <Input
        readOnly={false}
        type="text"
      />
    </FormItem>
  </Col>
  <Col
    md={4}
    xs={24}
  >
    <FormItem
      label="Vai trò"
      name="role"
      rules={
        Array [
          Object {
            "message": "Vui lòng nhập vai trò",
            "required": true,
          },
        ]
      }
    >
      <Select
        bordered={true}
        choiceTransitionName="zoom"
        options={
          Array [
            Object {
              "label": "Admin",
              "value": "admin",
            },
            Object {
              "label": "Nhân viên",
              "value": "admin",
            },
            Object {
              "label": "Thủ kho",
              "value": "admin",
            },
          ]
        }
        transitionName="slide-up"
      />
    </FormItem>
  </Col>
</Fragment>
`;

exports[`User input Match snapshoot view 1`] = `
<Fragment>
  <IF
    condt={true}
  >
    <Col
      md={4}
      xs={24}
    >
      <FormItem
        label="ID"
        name="id"
      >
        <Input
          readOnly={true}
          type="text"
        />
      </FormItem>
    </Col>
  </IF>
  <Col
    md={4}
    xs={24}
  >
    <FormItem
      label="Tên đăng nhập"
      name="name"
      rules={
        Array [
          Object {
            "message": "Vui lòng nhập tên đăng nhập",
            "required": true,
          },
          Object {
            "max": 255,
            "message": "Tên vượt quá độ dài cho phép",
          },
          Object {
            "message": "Tên đăng nhập không hợp lệ",
            "pattern": /\\^\\[\\\\t-\\\\r A-Z_a-z\\\\xA0\\\\xC0-\\\\xC3\\\\xC8-\\\\xCA\\\\xCC\\\\xCD\\\\xD2-\\\\xD5\\\\xD9\\\\xDA\\\\xDD\\\\xE0-\\\\xE3\\\\xE8-\\\\xEA\\\\xEC\\\\xED\\\\xF2-\\\\xF5\\\\xF9\\\\xFA\\\\u0102\\\\u0103\\\\u0110\\\\u0111\\\\u0128\\\\u0129\\\\u0168\\\\u0169\\\\u01A0\\\\u01A1\\\\u01AF\\\\u01B0\\\\u1680\\\\u1EA0-\\\\u1EBD\\\\u1EC0-\\\\u1EF9\\\\u2000-\\\\u200A\\\\u2028\\\\u2029\\\\u202F\\\\u205F\\\\u3000\\\\uFEFF\\]\\+\\$/,
          },
        ]
      }
    >
      <Input
        readOnly={true}
        type="text"
      />
    </FormItem>
  </Col>
  <Col
    md={4}
    xs={24}
  >
    <FormItem
      label="Vai trò"
      name="role"
      rules={
        Array [
          Object {
            "message": "Vui lòng nhập vai trò",
            "required": true,
          },
        ]
      }
    >
      <Select
        bordered={true}
        choiceTransitionName="zoom"
        options={
          Array [
            Object {
              "label": "Admin",
              "value": "admin",
            },
            Object {
              "label": "Nhân viên",
              "value": "admin",
            },
            Object {
              "label": "Thủ kho",
              "value": "admin",
            },
          ]
        }
        transitionName="slide-up"
      />
    </FormItem>
  </Col>
</Fragment>
`;
